--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ Carthage/Build
 # `pod install` in .travis.yml
 #
 # Pods/
+Podfile.lock
+Example/Pods
+Example/PQTaskManager.xcodeproj/project.xcworkspace
+Example
